
== Unreleased

Enhancements::

* add `save_theme` helper to work with a copy of the theme within a scope (#2196)
* add support for `scale` attribute or `iw` unit on `pdfwidth` attribute on image macros (#1933)
* add backlink from bibref on bibliography entry to first reference to that entry in the document (#1737)

Bug Fixes::

* correctly compute value of to cursor on extent when column box starts below top of page (#2230)
* fix crash in `ColumnBox#move_past_bottom` when `:reflow_margins` option is not set
* fix x position of SVG when advanced to next column of column box
* `at_page_top?` should consider top of column box to be top of page
* prevent SVG image taller than column from being advanced to next column
* fix computation of default height for formatted box inside column box
* don't push section that follows index section in article to new page if last page of index does not extend to bottom of page

== 2.0.7 (2022-06-03) - @mojavelinux

Improvements::

* don't recommend prawn-gmagick if PNG or JPG is corrupt or incomplete
* add helper method to determine when to recommend the prawn-gmagick gem

Bug Fixes::

* fix crash when doctitle or section title with automatic ID contains inline image without explicit width (#2228)
* use prawn-gmagick, if available, to read raster image referenced by SVG (#2223)
* allow image path in SVG to refer to any location within Asciidoctor jail (no restriction if safe mode is unsafe) (#1941)

=== Details

{url-repo}/releases/tag/v2.0.7[git tag] | {url-repo}/compare/v2.0.6\...v2.0.7[full diff]

== 2.0.6 (2022-05-30) - @mojavelinux

Bug Fixes::

* indent content of collapsible block and apply bottom margin to match style of HTML output (#2219)
* patch prawn-gmagick to reread bit depth of a PNG image if it extracts the wrong value (#2216)
* interpret width of SVG correctly when width is defined in file using px units (#2215)
* don't crash if inline role defines border width but not border color

=== Details
